<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/txtNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNews"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/txtNews2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNews2"
            app:layout_constraintBottom_toBottomOf="@id/txtNews"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <Button
            android:id="@+id/btnNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNews"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNews2"/>
    <Button
            android:id="@+id/btngoToDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btngoToDetails"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnNews"
            app:layout_constraintTop_toBottomOf="@id/txtNews2"/>


</androidx.constraintlayout.widget.ConstraintLayout>
